@@ -1,4 +1,16 @@
 options:
+  custom-slurm-repo:
+    type: string
+    default: ""
+    description: >
+      Use a custom repository for Slurm installation.
+
+      This can be set to the Organization's locall mirror/cache of packages and
+      superseeds the Omnivector repositories. Alternatively, it can be used to
+      track a `testing` Slurm version, e.g. by setting to
+      `ppa:omnivector/osd-testing`.
+
+      Note: currently supported for Ubuntu only.
   cluster-name:
     type: string
     default: osd-cluster
