@@ -184,7 +184,8 @@ class SlurmctldCharm(CharmBase):
 
         self.unit.status = WaitingStatus("Installing slurmctld")
 
-        successful_installation = self._slurm_manager.install()
+        custom_repo = self.config.get("custom-slurm-repo")
+        successful_installation = self._slurm_manager.install(custom_repo)
 
         if successful_installation:
             self._stored.slurm_installed = True
