@@ -1,3 +1,3 @@
 ops
-git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.6.12
+git+https://github.com/omnivector-solutions/slurm-ops-manager.git@0.6.13
 git+https://github.com/omnivector-solutions/interface-nrpe-external-master.git@master
