@@ -82,7 +82,8 @@ class SlurmdbdCharm(CharmBase):
 
         self.unit.status = WaitingStatus("Installing slurmdbd")
 
-        successful_installation = self._slurm_manager.install()
+        custom_repo = self.config.get("custom-slurm-repo")
+        successful_installation = self._slurm_manager.install(custom_repo)
 
         if successful_installation:
             self._stored.slurm_installed = True
